yaml/01mysqlstatefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  replicas: 1
  serviceName: mysql-svc
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: kkyungjin/rapa_db:v1
          args: 
            - "--ignore-db-dir=lost+found"
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
      volumes:
        - name: conf
          configMap:
            name: mysql-cnf
  volumeClaimTemplates: 
    - metadata:
        name: data
      spec:
        storageClassName: aws-sc-ebs     #storageClassName에 값을 주지 않으면 default 로 동작한다. 
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
