yaml/02redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: kkyungjin/rapa_redis:v1
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: conf
          mountPath: /usr/local/etc/redis    
      volumes:
        - name: conf
          configMap:
            name: redis-conf

---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
