yaml/02was.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywas-svc
spec:
  selector:
    app: mywas
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mywas
  template:
    metadata:
      labels:
        app: mywas
    spec:
      containers:
      - name: mywas
        image: kkyungjin/rapa_was2:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
