yaml/03nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
spec:
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: myweb
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name:  conf
            mountPath:  /etc/nginx/
      volumes:
        - name: conf
          configMap:
            name: nginx-conf

---

apiVersion: v1
kind: Service
metadata:
  name: mysvc
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: myweb
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
