yaml/04ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    # kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:973510907968:certificate/7673736d-87a1-444b-bb77-aea7c3b68c8a
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  # tls:
  #   - hosts:
  #       - www.frodo.co.kr
  #     secretName: tls-crt 
  ingressClassName: alb
  rules:
  - host: www.kkyungjin.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mysvc
            port: 
              number: 80
